--- a/FunctionDevelopment.Rmd
+++ b/FunctionDevelopment.Rmd
@@ -185,15 +185,18 @@ ___________________________________________________________________
 ## IV. Isolate focal function
 ```{r}
 ## function to isolate a single focal & add a cumulative time column
-isolate.focal <- function(i){
-  onefocal.i <- subset(monkeyprelimdata, monkeyprelimdata$FocalID == i)
+## only really works with my specific data & names
+## (useful for testing functions, not really for any actual analysis)
+
+isolate.focal <- function(data, i){
+  onefocal.i <- subset(data, data$FocalID == i)
   cumsum.i <- data.frame(cumsum(onefocal.i$TimeSpent))
   onefocal.i <- cbind(onefocal.i, cumsum.i)
   return(onefocal.i)
 }
 
 # test
-focal_28 <- isolate.focal(28)
+focal_28 <- isolate.focal(monkeyprelimdata, 28)
 ```
 
 
@@ -203,9 +206,8 @@ __________________________________________________________________________
 
 ## V.1 Notes
 
-### Henry optim chat ----
-
 ```{r}
+## rough sketch from henry
 get_ll.h <- function(X, mu, sigma){
   if(sigma < 0) return(-Inf)
   sum(dnorm(X, mean = mu, sd = sigma, log = T))
@@ -528,7 +530,56 @@ _________________________________________________________________________
 - Add uncertainty/predictors (add something to code before get_ll??)
 - Map covariates to P
 
+
 ```{r}
+## i am bailing on this and going to try to just work from a single example instead
+## idk what happened here i am way more lost than i was a week ago
+cov2prob <- function(data, Betas, behavior_list){
+  X <- model.matrix(~ TimeSpent + Behavior + Habitat, data = data)
+      ## is X supposed to have the behaviors?????? 
+      ## is it just like the habitat covariate dummy that is supposed to be there??????
+  B <- length(behavior_list)
+  
+  P_i <- c() ## idk what i am supposed to fill this with to get a BxB
+  
+  # does X go to T as in # of seconds in the focal or number of focals?
+  for (i in 1:length(data)){
+     Xt <- X[i, ] ## X for a single time points
+      ## but we said we are assuming X is a vector that stays the same bc we are now working based on focals
+     ## so idk what X is actually? I think I am looping over the wrong thing
+     eta_ij <- matrix(NA, nrow = length(data), ncol = B) ## my dimensions are wack
+                  ## not sure about the ncol??  
+     for (j in 1:B){
+      eta_ij[j, ] <- exp(t(Xt)*Beta[i,j]) ## still confused on beta
+      P_i <- c(P_i, eta_ij/rowsum(eta_ij))
+        ## i think this has to be inside this loop so then it will be of length B?
+            ## not the length of the data
+            ## hot take idk whats happening here
+            ## i am more confused than i was a week ago
+            ## none of this is looping right
+            ## idek if im defining things as they should be
+     }
+    }
+  return(P_i) ## this should be returning a BxB matrix???? idk 
+}
+
+## use the cov2prob function in a new version of the get_ll function that uses the row version?
+get_ll_new <- function(Y, data, Betas, behavior_list){ ## wtf is Y
+  B <- length(behavior_list)
+  for (i in 1:B){
+    for (t in 1:T){ ## T is the number of focals
+      ## cov2prob(Betas[i, ])
+      ## use get_ll_row
+    }
+    ## sum ll over focals
+  }
+}
+```
+
+
+```{r}
+## trying to work off an example (total fail)
+
 ## sample set
 fake_behaviors5.2 <- c("move", "feed", "aggresive", "vigilance", "move", "sleep", 
                      "vigilance","feed", "sleep", "move", "sleep", "move", "aggresive", "vigilance",
@@ -537,88 +588,54 @@ fake_behaviors5.2 <- c("move", "feed", "aggresive", "vigilance", "move", "sleep"
 fake_duration5.2 <- c(10, 20, 7, 10, 5, 140, 30, 25, 250, 30, 30, 60, 15, 10, 200, 23, 78, 
                     20, 45, 90, 20, 10, 45, 45, 30, 10) 
 fake_category5.2 <- c(rep("jalan", 15), rep("hutan", 11))
+fake_focal5.2 <- c(rep("1", 15), rep("2", 11))
 
-fake_data5.2 <- data.frame(fake_duration5.2, fake_behaviors5.2, fake_category5.2)
-colnames(fake_data5.2) <- c("TimeSpent", "Behavior", "Habitat")
+fake_data5.2 <- data.frame(fake_duration5.2, fake_behaviors5.2, fake_category5.2, fake_focal5.2)
+colnames(fake_data5.2) <- c("TimeSpent", "Behavior", "Habitat", "FocalID")
 
-testingggg <- model.matrix(~ TimeSpent + Behavior + Habitat, 
-                     data = fake_data5.2)[, -1]
 
-## Q: where do i pull the betas from????? is that in the function??????
-## i think for my matrix equation to make sense it has to be 2 rows and however many behaviors we have for # of columns
+fake_focal5.2.1 <- isolate.focal(fake_data5.2, 1)
+fake_focal5.2.2 <- isolate.focal(fake_data5.2, 2)
 
-fake_betas <- matrix(rnorm(2*ncol(testingggg)), nrow = 2)
+## exampleX.5.2.1 <- model.matrix(~ Habitat, data = fake_focal5.2.1)
+## so that no longer makes sense bc we only have 1 level for the predictors, do we just assign 0 or 1 arbitrarily now????
+
+## wait but we said that we are now working with the assumption that the predictors stay the same for each focal so we dont switch between habitats (adding a column for focal # to the fake data) 
+
+
+
+### betas!
+## Bi is a B x M matrix (B is # behaviors, M is # of predictors)
+## so we have 5 behaviors here and 1 predictor (forest/road), so 5 rows and 1 column?
+
+fake_betas <- matrix(rnorm(5), nrow = 5) ## this needs to be an array now? 
+                                         ## but we pull out a single matrix
+
+X_test <- c(1, 1) # intercept, jalan?
+## 0 for hutan, 1 for jalan? should i add in another variable thats like monkey name so X isnt just a single number (we still have the intercept)
+## i have lost what X is supposed to be
+## its like the covariates right??? with dummy variables??
+## and then betas give the weights for it or something?????
+
+## i think i still dont understand how to define the things i am working with well enough to actually execute this 
 ```
 
 
-## multinomial logit link
-   # eta = x * beta_ij
-   # p = eta / rowsums(eta)
-   
-```{r}
-## function to convert covariates to probability (use multinomial logit link)
+- use get_ll_row
+  - p_row is now a matrix that changes in time
+  - jk need to redo it?? or no idk
 
-## i think there should have been a loop in here somewhere over the behaviors
+- adding by focal (T) to simplify Xs (in each block the predictors stay the same)
+- t is now a focal indicator
 
+- get the cov2prob to work
+- assuming x is a vector that is staying the same
 
-cov2prob <- function(beta, X){
-  X <- model.matrix(~ TimeSpent + Behavior + Habitat, data = X) [, -1]
-  ## do i want the intercept? i think no but i dont have a good reason why
-  
-  ## logit(Pi) = t(Xi)*Beta
-  ## eta = t(Xi)*Beta_ij (j = 1, . . ., B)
-  ## Pij = exp(eta_ij)/sum(exp(eta)ij))
-  
-  
-  eta <- X %*% t(beta)   ## i think the fundamental format is wrong here bc it should be t(X)?
-  exp_eta <- exp(eta)
-  prob <- exp_eta/rowSums(exp_eta)
-  
-  return(prob)
-}
-```
-
-```{r}
-cov2prob(fake_betas, fake_data5.2)
-
-## this output makes no sense idk what im looking at
-# i dont think i should have a matrix the size of my dataset.....
-```
-
-```{r}
-## take 2 :)
-
-  ## logit(Pi) = t(Xi)*Beta
-  ## eta = t(Xi)*Beta_ij (j = 1, . . ., B)
-  ## Pij = exp(eta_ij)/sum(exp(eta)ij))
-
-## what form should beta be in? i think its a matrix but is it just a vector of coefficients?
-
-cov2prob <- function(beta, X, behavior_list){
-  X <- model.matrix(~ TimeSpent + Behavior + Habitat, data = X) [, -1]
-  ## still have the intercept question (still think no)
-  B <- length(behavior_list)
-  
-  
-  for (i in something){ ## is the something in X? what is Xi? is it a single second in the data??
-    x <- x[i,]
-    for (j in B){ ## then this runs through each behavior
-      eta_ij <- t(x)*beta
-      
-    }
-  }
-  
-  eta <- X %*% t(beta)  
-  exp_eta <- exp(eta)
-  prob <- exp_eta/rowSums(exp_eta)
-  
-  return(prob)
-}
-```
-
-QUESTIONS: probably should have clarified this last week oops
-- do we want an intercept for the model matrix (i think no)? should there even be a model matrix in here?
-- are the betas a vector or a matrix?? in my mind it has to be a matrix to make sense but perhaps not
-- whats the loop situation??
+cov2prob in the get_ll function?? then just pull the row you want
+cov2prob based on a single indicator
 
 
+
+this made sense in the meeting and now im looking at it and have no idea
+
+bestie i have 100% lost the plot here :)
